added edit pages

--- a/templates/_footer.plush.html
+++ b/templates/_footer.plush.html
@@ -22,6 +22,7 @@
 <%= javascriptTag("js/uikit_custom.min.js") %>
 <%= javascriptTag("js/altair_admin_common.min.js") %>
 <%= javascriptTag("js/jquery.waitforimages.js") %>
+<%= javascriptTag("js/rails.js") %>
 
 <script>
 $(function() {
