--- a/templates/_head.plush.html
+++ b/templates/_head.plush.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Rod Watkins">
   <meta name="description" content="Site Manager">
   <!-- Fav Icon  -->
-  <link rel="shortcut icon" href='<%= assetPath("img/favicon.png") %>'>
+  <link rel="shortcut icon" href='<%= assetPath("img/logo16.png") %>'>
   <meta name="csrf-param" content="authenticity_token" />
   <meta name="csrf-token" content="<%= authenticity_token %>" />
   <!-- Page Title  -->
