--- a/templates/courses/_filesets.plush.html
+++ b/templates/courses/_filesets.plush.html
@@ -1,61 +1,46 @@
-<div class="md-card uk-margin-medium-bottom">
-  <div class="md-card-toolbar">
-    <div class="md-card-toolbar-actions">
-      <a href="#" class="md-btn md-btn-small md-btn-flat md-btn-flat-primary">Add Fileset</a>
-    </div>
-    <h3 class="md-card-toolbar-heading-text">
-      Filesets
-    </h3>
+<div class="uk-grid uk-margin-small-bottom" data-uk-grid-margin="">
+  <div class="uk-width-medium-2-3 uk-row-first">
+    <div class="uk-text-bold uk-text-large">Filesets</div>
   </div>
-  <div class="md-card-content">
-    <div class="uk-overflow-container">
-      <table class="uk-table uk-table-nowrap table_check">
-        <thead>
-        <tr>
-          Pres        string
-          Name        string
-          Revision    string
-          LastMod     string
-          Description string
-
-          <th class="uk-width-1-10">
-            Name
-          </th>
-          <th class="uk-width-2-10">URL</th>
-          <th class="uk-width-2-10">Description</th>
-          <th class="uk-width-2-10">Revision/Last Modified</th>
-          <th class="uk-width-2-10 uk-text-right">Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <%= for (part) in course.Parts { %>
-        <%= for (week) in part.Weeks { %>
-        <%= for (fileset) in week.Filesets { %>
-        <tr>
-          <td>
-            <div class="uk-text-small">
-              <%= week.Prefix %> <%= week.Name %>
-            </div>
-            <div>
-              <%= fileset.Name %>
-            </div>
-          </td>
-          <td><%= fileset.Pres %></td>
-          <td>
-            <%= fileset.Description %>
-          </td>
-          <td><div><%= fileset.Revision %></div><%= fileset.LastMod %></td>
-          <td class="uk-text-right">
-            <a href="<%= editCoursePartPath({ course_id: course.Project, part_id: part.ID }) %>" class="md-btn md-btn-small md-btn-flat md-btn-flat-primary">Edit</a>
-            <a href="#" class="md-btn md-btn-small md-btn-flat md-btn-flat-primary">Delete</a>
-          </td>
-        </tr>
-        <% } %>
-        <% } %>
-        <% } %>
-
-        </tbody>
-      </table>
-    </div>
+  <div class="uk-width-medium-1-3">
+    <a href="<%= editCoursePartPath({ course_id: course.Project, part_id: part.ID }) %>"
+       class="uk-align-right md-btn md-btn-small md-btn-flat md-btn-flat-primary">Add Fileset</a>
   </div>
 </div>
+<table class="uk-table uk-table-nowrap uk-table- table_check">
+  <thead>
+  <tr>
+    <th class="uk-width-1-10">
+      Name
+    </th>
+    <th class="uk-width-2-10">URL</th>
+    <th class="uk-width-2-10">Description</th>
+    <th class="uk-width-2-10">Revision/Last Modified</th>
+    <th class="uk-width-2-10 uk-text-right">Actions</th>
+  </tr>
+  </thead>
+  <tbody>
+
+  <%= for (fileset) in week.Filesets { %>
+  <tr>
+    <td>
+      <div class="uk-text-small">
+        <%= week.Prefix %> <%= week.Name %>
+      </div>
+      <div>
+        <%= fileset.Name %>
+      </div>
+    </td>
+    <td><%= fileset.Pres %></td>
+    <td>
+      <%= fileset.Description %>
+    </td>
+    <td><div><%= fileset.Revision %></div><%= fileset.LastMod %></td>
+    <td class="uk-text-right">
+      <a href="<%= editCoursePartPath({ course_id: course.Project, part_id: part.ID }) %>" class="md-btn md-btn-small md-btn-flat md-btn-flat-primary">Edit</a>
+    </td>
+  </tr>
+  <% } %>
+
+  </tbody>
+</table>
