--- a/templates/courses/_parts.plush.html
+++ b/templates/courses/_parts.plush.html
@@ -8,29 +8,23 @@
     </h3>
   </div>
   <div class="md-card-content">
-    <div class="uk-overflow-container">
-      <table class="uk-table uk-table-nowrap table_check">
-        <thead>
-        <tr>
-          <th class="uk-width-1-10">Name</th>
-          <th class="uk-width-2-10">Weeks</th>
-          <th class="uk-width-2-10 uk-text-right">Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <%= for (part) in course.Parts { %>
-        <tr>
-          <td><%= part.Name %></td>
-          <td><%= len(part.Weeks) %></td>
-          <td class="uk-text-right">
-            <a href="<%= editCoursePartPath({ course_id: course.Project, part_id: part.ID }) %>" class="md-btn md-btn-small md-btn-flat md-btn-flat-primary">Edit</a>
-            <a href="#" class="md-btn md-btn-small md-btn-flat md-btn-flat-primary">Delete</a>
-          </td>
-        </tr>
-        <% } %>
+    <%= for (part) in course.Parts { %>
 
-        </tbody>
-      </table>
+    <div class="uk-grid" data-uk-grid-margin="">
+      <div class="uk-width-medium-2-3 uk-row-first">
+        <h3><%= part.Name %></h3>
+      </div>
+      <div class="uk-width-medium-1-3">
+        <a href="<%= editCoursePartPath({ course_id: course.Project, part_id: part.ID }) %>"
+           class="uk-align-right md-btn md-btn-small md-btn-flat md-btn-flat-primary">Edit</a>
+      </div>
     </div>
+    <div class="uk-margin-medium-bottom uk-margin-left">
+      <%= partial("courses/weeks.plush.html", { part: part } ) %>
+    </div>
+
+    <% } %>
+
+
   </div>
 </div>
