--- a/templates/courses/_weeks.plush.html
+++ b/templates/courses/_weeks.plush.html
@@ -1,53 +1,31 @@
-<div class="md-card uk-margin-medium-bottom">
-  <div class="md-card-toolbar">
-    <div class="md-card-toolbar-actions">
-      <a href="#" class="md-btn md-btn-small md-btn-flat md-btn-flat-primary">Add Week</a>
-    </div>
-    <h3 class="md-card-toolbar-heading-text">
-      Weeks
-    </h3>
+<div class="uk-grid uk-margin-small-bottom" data-uk-grid-margin="">
+  <div class="uk-width-medium-2-3 uk-row-first">
+    <div class="uk-text-bold uk-text-large">Weeks</div>
   </div>
-  <div class="md-card-content">
-    <div class="uk-overflow-container">
-      <table class="uk-table uk-table-nowrap table_check">
-        <thead>
-        <tr>
-          <th class="uk-width-1-10">Name</th>
-          <th class="uk-width-2-10">Dates</th>
-          <th class="uk-width-2-10">Description</th>
-          <th class="uk-width-2-10">Assessment</th>
-          <th class="uk-width-2-10 uk-text-right">Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <%= for (part) in course.Parts { %>
-          <%= for (week) in part.Weeks { %>
-          <tr>
-            <td>
-              <div class="uk-text-small">
-                <%= part.Name %>
-              </div>
-              <div>
-                <%= week.Name %>
-              </div>
-
-            </td>
-            <td>
-              <div class="uk-text-small"><%= week.Prefix %></div>
-                <%= week.BeginDate %> - <%= week.EndDate %>
-            </td>
-            <td><%= week.Description %></td>
-            <td><%= week.Assessment %></td>
-            <td class="uk-text-right">
-              <a href="<%= editCoursePartPath({ course_id: course.Project, part_id: part.ID }) %>" class="md-btn md-btn-small md-btn-flat md-btn-flat-primary">Edit</a>
-              <a href="#" class="md-btn md-btn-small md-btn-flat md-btn-flat-primary">Delete</a>
-            </td>
-          </tr>
-          <% } %>
-        <% } %>
-
-        </tbody>
-      </table>
-    </div>
+  <div class="uk-width-medium-1-3">
+    <a href="<%= editCoursePartPath({ course_id: course.Project, part_id: part.ID }) %>"
+       class="uk-align-right md-btn md-btn-small md-btn-flat md-btn-flat-primary">Add Week</a>
   </div>
 </div>
+<%= for (week) in part.Weeks { %>
+  <div class="uk-grid" data-uk-grid-margin="">
+    <div class="uk-width-medium-2-3 uk-row-first">
+      <span class="uk-text-large uk-text-bold"><%= week.Name %></span>
+      <div class="uk-text-small"><%= week.Prefix %>: <%= week.BeginDate %> - <%= week.EndDate %></div>
+      <div class="uk-text-small"><%= week.Description %></div>
+      <%= if (week.Assessment != "") { %>
+      <div class="uk-text-small"><%= week.Assessment %></div>
+      <% } %>
+    </div>
+    <div class="uk-width-medium-1-3">
+      <a href="<%= editCoursePartPath({ course_id: course.Project, part_id: part.ID }) %>"
+         class="uk-align-right md-btn md-btn-small md-btn-flat md-btn-flat-primary">Edit</a>
+    </div>
+  </div>
+  <div class="uk-margin-left">
+    <%= partial("courses/readings.plush.html", { wek: week }) %>
+  </div>
+  <div class="uk-margin-left uk-margin-medium-bottom">
+    <%= partial("courses/filesets.plush.html") %>
+  </div>
+<% } %>
